--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <h1>Markku Willberg</h1>
 <h2>List of all individual Excercises</h2>
 <ul>
-    <li><a href="Exercise1.html">Exercise1</a></li>
-    <li>Exercise2</li>
+    <li><a href="Exercise1.html"target="_blank">Exercise 1</a></li>
+    <li><a href="Exercise2.html" target="_blank" >Exercise 2</a></li>
     <li>Exercise3</li>
     <li>Exercise4</li>
     <li>Exercise5</li>
