--- a/exercise2.html
+++ b/exercise2.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Markku Willberg Exercise 2</title>
 </head>
 <body>
-    <p>Hello world</p>
+    <header>Some header</header>
+    <main>
+        <article>
+            <h1>Title of the article</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ut est sed quam blandit dignissim. Ut cursus auctor rhoncus. Donec suscipit egestas sem eget porta.
+            </p>
+        </article>
+
+
+
+    </main>
 </body>
 </html>
