--- a/Exercise1.html
+++ b/Exercise1.html
@@ -15,6 +15,11 @@
 <a href="https://www.mantsalanuutiset.fi/paikalliset/">paikalliset</a>
 <a href="https://www.mantsalanuutiset.fi/urheilu/">Urheilu</a>
 <br>
+<br>
+<a href="index.html"target="_blank">Index homepage</a></li>
+<br>
+<br>
+
 <b>This is bold</b>
 <br>
 <img src="https://i.media.fi/incoming/8cf4bb/2528080.jpg/alternates/FREE_720/2528080.jpg">
