--- a/Exercise3.html
+++ b/Exercise3.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Exercise 2 html">
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <title>Markku Willberg - Exercise 2</title>
 </head>
 <body>
-    
+    <header>
+        <ol>
+    <li><a href="index.html" target="_blank">Home</a></li>
+    <li><a href="aboutus.html" target="_blank">About us</a></li>
+    <li><a href="projects.html" target="_blank">Projects</a></li>
+        </ol>
+    </header>
+    <main>
+        <article>
+            <h1>Oceanus Procellarum</h1>
+            <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Oceanus_Procellarum_%28LRO%29.png/200px-Oceanus_Procellarum_%28LRO%29.png" alt="Oceanus_Procellarum" style="float: right;">
+                Oceanus Procellarum /oʊˈsiːənəs prɒsɛˈlɛərəm/ 
+                (Latin: Ōceanus procellārum, lit. 'Ocean of Storms' is a 
+                vast lunar mare on the western edge of the near side of the Moon.
+                It is the only one of the lunar maria to be called an "Oceanus" (ocean), 
+                due to its size: Oceanus Procellarum is the largest of the maria ("seas")
+                stretching more than 2,500 km (1,600 mi) across its north–south axis and
+                covering roughly 4,000,000 km2 (1,500,000 sq mi), accounting for 10.5% of 
+                the total lunar surface area.
+            </p>
+            <p>
+                Like all lunar maria, 
+                Oceanus Procellarum was formed by ancient volcanic eruptions
+                resulting in basaltic floods that covered the region in a thick,
+                nearly flat layer of solidified magma. Basalts in Oceanus Procellarum 
+                have been estimated to be as young as one billion years old. 
+                Unlike the other lunar maria, however, Oceanus Procellarum may
+                or may not be contained within a single, well-defined impact basin.
+
+                Around its edges lie many minor bays and seas, including Sinus Roris to the north,
+                and Mare Nubium and Mare Humorum to the south. To the northeast, Oceanus Procellarum is 
+                separated from Mare Imbrium by the Carpathian Mountains. On its north-west edge lies the 32 
+                km wide Aristarchus ray crater, the brightest feature on the Near side of the Moon. Also,
+                the more-prominent ray-crater Copernicus lies within the eastern edge of the mare, distinct with 
+                its bright ray materials sprawling over the darker material.
+            </p>
+        </article>
+        <address>
+            Hämeen ammattikorkeakoulu HAMK PL 230 13101 Hämeenlinna
+        </address>
+
+
+    </main>
 </body>
 </html>
