--- a/Exercise1.html
+++ b/Exercise1.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markku Willberg kopioteht</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <title>Markku Willberg Exercise 1</title>
 </head>
 <body>
     
@@ -16,7 +17,7 @@
 <a href="https://www.mantsalanuutiset.fi/urheilu/">Urheilu</a>
 <br>
 <br>
-<a href="index.html"target="_blank">Index homepage</a></li>
+<a href="index.html" target= "_blank">Index homepage</a>
 <br>
 <br>
 
