--- a/exercise2.html
+++ b/exercise2.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Exercise 2 html">
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
     <title>Markku Willberg - Exercise 2</title>
 </head>
 <body>
     <header>
-    <li><a href="index.html"target="_blank">Home</a></li>
-    <li><a href="aboutus.html"target="_blank">About us</a></li>
-    <li><a href="projects.html"target="_blank">Projects</a></li>
+        <ol>
+    <li><a href="index.html" target= "_blank">Home</a></li>
+    <li><a href="aboutus.html" target= "_blank">About us</a></li>
+    <li><a href="projects.html" target= "_blank">Projects</a></li>
+        </ol>
     </header>
     <main>
         <article>
