--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-<html>
-    <head>
-        <title>Theese are my individual tasks</title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+</head>
 <body>
-<h1>Markku Willberg</h1>
-<h2>List of all individual Excercises</h2>
+    <h1>Markku Willberg</h1>
+    <h2>List of all individual Excercises</h2>
 <ul>
-    <li><a href="Exercise1.html"target="_blank">Exercise 1</a></li>
+    <li><a href="Exercise1.html" target="_blank">Exercise 1</a></li>
     <li><a href="exercise2.html" target="_blank" >Exercise 2</a></li>
-    <li>Exercise3</li>
+    <li><a href="exercise3.html" target="_blank" >Exercise 3</a></li>
     <li>Exercise4</li>
     <li>Exercise5</li>
 </ul>
-</body>    
+</body>
 </html>
