--- a/exercise2.html
+++ b/exercise2.html
@@ -12,7 +12,7 @@
     <header>
         <ol>
     <li><a href="index.html" target= "_blank">Home</a></li>
-    <li><a href="aboutus.html" target= "_blank">About us</a></li>
+    <li><a href="Aboutus.html" target= "_blank">About us</a></li>
     <li><a href="projects.html" target= "_blank">Projects</a></li>
         </ol>
     </header>
