--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul>
     <li><a href="Exercise1.html" target="_blank">Exercise 1</a></li>
     <li><a href="exercise2.html" target="_blank" >Exercise 2</a></li>
-    <li><a href="exercise3.html" target="_blank" >Exercise 3</a></li>
+    <li><a href="Exercise3.html" target="_blank" >Exercise 3</a></li>
     <li>Exercise4</li>
     <li>Exercise5</li>
 </ul>
