--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="Exercise1.html" target="_blank">Exercise 1</a></li>
     <li><a href="exercise2.html" target="_blank" >Exercise 2</a></li>
     <li><a href="Exercise3.html" target="_blank" >Exercise 3</a></li>
-    <li>Exercise4</li>
+    <li><a href="Exercise4.html" target="_blank" >Exercise 4</a></li>
     <li>Exercise5</li>
 </ul>
 </body>
