--- a/mozilla_splash/index.html
+++ b/mozilla_splash/index.html
@@ -101,14 +101,14 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-        <img src="firefoxlogo400RGB.png"
-        alt="firefox logo">
+        <img src="firefoxlogo400RGB.png" alt= "firefox logo">
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
 
+        <iframe width="400" height="200" src="https://www.youtube.com/embed/ojcNcvb1olg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
