--- a/Excercise4.html
+++ b/Excercise4.html
@@ -6,72 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name= "description" content="Exercise 4">
     <title>Markku Willberg - Excercise 4</title>
-
-    <style>
-
-        body {
-            margin: 0px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            background-color:rgb(233, 232, 200);
-        }
-
-        header, footer {
-            background: rgb(12, 147, 209);
-            height: 100px;
-            margin: 5px;
-        }
-
-        article {
-            color: royalblue;
-            background-color: rgb(248, 212, 166);
-            padding: 10px;
-            text-align: start;
-            margin: 10px;
-            padding: 10px;
-            font-size: larger;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        }
-        section {
-            color: rgb(255, 106, 0);
-            background: rgb(233, 232, 200);
-            display: table-cell;
-            width: 50000px;
-            margin: 5px;
-            padding: 5px;
-        }
-
-        h1 {
-            color: rgb(255, 153, 0);
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            text-align: center;
-            line-height: 100px;
-            margin: 5px;
-        }
-        .middlepart {
-            display: table-row, flex;
-            flex-wrap: wrap;
-            margin: 5px;
-        }
-        ul {
-            margin: 0px;
-            background-color:rgb(233, 232, 200);
-            color: deepskyblue;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            font-size: large;
-            padding: 0px;
-            list-style: none;
-            display: table-cell;
-            width: 750px;
-            text-align: center;
-        }
-        li a:hover {
-            color: gold;
-        }
-        a {
-            color: orange;
-        }
-    </style>
-
+    <link rel='stylesheet' type='text/css' media='screen' href='css/cssexe4.css'>
 </head>
 <body>
     <header>
