--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="exercise2.html" target="_blank" >Exercise 2</a></li>
     <li><a href="Exercise3.html" target="_blank" >Exercise 3</a></li>
     <li><a href="Exercise4.html" target="_blank" >Exercise 4</a></li>
-    <li>Exercise5</li>
+    <li><a href="Exercise5.html" target="_blank" >Exercise 5</a></li>
 </ul>
 </body>
 </html>
