--- a/Exercise5.html
+++ b/Exercise5.html
@@ -38,28 +38,28 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
-            <th scope="col">Difficulty</th>
-            <th scope="col">Location</th>
+            <th scope="col">Lastname</th>
+            <th scope="col">Task</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th scope="row">1</th>
-            <td>Turael</td>
-            <td>easy</td>
-            <td>Burthope</td>
+            <td>Rafael</td>
+            <td>Irmhild</td>
+            <td>Management</td>
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td>Spria</td>
-            <td>easy</td>
-            <td>Draynor Village</td>
+            <td>Malte</td>
+            <td>Kerstin</td>
+            <td>CSS</td>
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td>Vannaka</td>
-            <td>Medium</td>
-            <td>Edgeville</td>
+            <td>Ilsa</td>
+            <td>Marte</td>
+            <td>html</td>
           </tr>
         </tbody>
       </table>
